# duui-uima

./: .gitmodules
duui-HeidelTimeExt/: dockerfile  justfile  pom.xml
duui-gazetteer-rs/: .gitignore  Dockerfile  docker-build.sh  justfile  pom.xml
duui-gazetteer-rs/variants/biofid/: docker-build.sh  justfile  parse_dwca.py
duui-gazetteer-rs/variants/biofid/docker/: biofid.Dockerfile  catalogue_of_life.Dockerfile  gbif_backbone.Dockerfile
duui-gazetteer-rs/variants/biofid_habitat/: docker-build.sh
duui-gazetteer-rs/variants/geonames/: docker-build.sh
duui-gazetteer-rs/variants/gnd/: docker-build.sh
duui-geonames-fst/: justfile
duui-geonames-fst/src/main/docker/: country.Dockerfile  eu.Dockerfile  europe-central.Dockerfile  europe.Dockerfile  single.Dockerfile  world.Dockerfile
duui-gnfinder-v2/: Dockerfile  justfile
duui-gnfinder-v2/src/main/: communication_layer.lua  entrypoint.sh  wsgi.py
duui-llama-cpp-python/: README.md  justfile
duui-llama-cpp-python/base/: justfile
duui-ner-ort/: Cargo.toml  Dockerfile  Dockerfile.model  build.rs  justfile
duui-ner-ort/.cargo/: config.toml
duui-ner-ort/src/: main.rs  schema.rs
duui-ner-rust_bert/: Cargo.toml  Dockerfile  communication_layer.lua  duui-uima-rust_bert.code-workspace  justfile  make_test_data.py
duui-ner-rust_bert/src/: main.rs  routes.rs  schema.rs  util.rs
duui-spacy-eos/: Dockerfile  justfile
duui-spacy-eos/src/: duui.py
duui-spacy-lua-process/: Dockerfile  justfile
duui-spacy-lua-process/src/main/: communication_layer.lua  wsgi.py
(+64 files in other folders)
