[package]
name = "duui-ner-ort"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
rayon = "1.9.0"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert.git", rev = "29f9a7a0ff832c742db919cbc6fd0b9c865a98ae" }
rust_tokenizers = "8.1.1"
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.57"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
